
ATTENTION! The default location of the meter_readings directory has changed
from /var/log/wmbusmeters/meter_readings to /var/lib/wmbusmeters/meter_readings
This only affects new installations. Existing conf files will use the old location
as specified int the conf file.

Add detection of bad CUL firmware.

Using :mbus as suffix to the meter driver now works to poll a meter of mbus instead of
listening to wmbus telegrams.

wmbusmeters --pollinterval=1h --format=json MAIN=/dev/ttyUSB0:mbus MyTemp piigth:MAIN:2400:mbus 12301234 NOKEY

Added --pollinterval=<time> to set the poll interval for all meters to 10 minutes.
As <time> you can say 5s 10m 11h etc.

Added --ppjson to pretty print json, ie add newlines and indentation.

Alexander Streit added support for the Zenner Zelsius C5 ISF heat meter. Thanks Alexander!

Version 1.7.0: 2022-03-28

Added verio451mid heat meter.

Improved --analyze command significantly.

ldebomy fixed a bug in the izar decoding that for some meters dropped the most significant digit
in the serial number. Thanks ldebomy!

Germar Reitze fixed a bug where negative BCD values were not properly converted. Thanks Germar!

Fix unnecessary probing bug where a specified device like: /dev/ttyUSB0:im871a:c1
and im871a:c1 would still cause wmbusmeters to probe for all types of devices on the serial port(s).
Now it only probes for im871a which speeds up the startup time significantly.

The sharky774 was improved to handle more different meter configurations.

Michael Ott fixed a bug in oneshot. Thanks Michael!

Fix bug in mode 7 decryption when the encrypted data was followed by non-encrypted data.

NOTE! Json slight json output change drivers esyswm and evo868 where fabrication now is now properly reversed.

You can now combine --useconfig=<dir> with --oneshot --exitafter=<time>
--silent --verbose --debug --normal --trace to override the config file settings.
(Already existing possible overrides was --device=<device> and --listento<mode>.)
