@@ -93,6 +93,8 @@ Add :verbose to any analyze to get more verbose analyze output.
 
 \fB\--oneshot\fR wait for an update from each meter, then quit
 
+\fB\--pollinterval=\fR<interval> poll mbus meters every <interval>, default is 10m.
+
 \fB\--ppjson\fR pretty print the json output
 
 \fB\--resetafter=\fR<time> reset the wmbus dongle regularly, default is 23h
